--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ package-mode = false
 python = "^3.12"
 fastapi = "^0.115.6"
 uvicorn = {extras = ["standard"], version = "^0.34.0"}
+py-ulid = "^1.0.3"
 
 
 [build-system]
