--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 sqlalchemy = "^2.0.36"
 mysqlclient = "^2.2.6"
 alembic = "^1.14.0"
+dependency-injector = "^4.44.0"
 
 
 [build-system]
